fixed loading icon and button to display none or flex when loading. Also fixed hamburger styling to show through dark posters and be more visible

--- a/src/assets/Card.css
+++ b/src/assets/Card.css
@@ -12,4 +12,7 @@
   top: 15px;
   right: 15px;
   cursor: pointer;
+  background-color: #ffffff87;
+  padding: 4px;
+  border-radius: 4px;
 }
