--- a/src/assets/Deck.css
+++ b/src/assets/Deck.css
@@ -54,3 +54,8 @@ img {
   cursor: pointer;
   font-size: 35px;
 }
+
+.load-button:active {
+  transform: scale(0.98);
+  box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24);
+}
